
plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
    id 'org.jetbrains.kotlin.android'
    //id 'kotlin-android'
}

apply plugin: 'com.android.application'

// Apply the Crashlytics Gradle plugin
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'
apply plugin: 'com.google.firebase.firebase-perf'

def playcoreDir = file('G:\\Programs\\AndroidStudioRepositories\\play-core-native-sdk-1.10.0\\play-core-native-sdk')

android {

    compileSdk 34
    ndkVersion "22.1.7171670"

    buildToolsVersion = '33.0.1'


    /*
        Compose Options
        ----------------
    */
    buildFeatures {
        compose true
    }
    composeOptions {
        kotlinCompilerExtensionVersion = "1.5.1"
    }
    kotlin {
        jvmToolchain(17)
    }
    /* ---------------- */


    bundle {
        language {
            enableSplit = false
        }
    }

    defaultConfig {
        applicationId 'com.TritiumGaming.phasmophobiaevidencepicker'

        minSdkVersion 21
        targetSdkVersion 34
        versionCode 86
        versionName "8.1.1.1"

        externalNativeBuild {
            cmake {
                // Define the PLAYCORE_LOCATION directive.
                arguments "-DANDROID_STL=c++_static", "-DPLAYCORE_LOCATION=$playcoreDir"
            }
        }
        ndk {
            // Skip deprecated ABIs. Only required when using NDK 16 or earlier.
            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
        }

        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
            shrinkResources false
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            // PLAYCORE
            proguardFile "$playcoreDir/proguard/common.pgcfg"
            proguardFile "$playcoreDir/proguard/per-feature-proguard-files"
        }
        release {
            shrinkResources true
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            // PLAYCORE
            proguardFile "$playcoreDir/proguard/common.pgcfg"
            proguardFile "$playcoreDir/proguard/per-feature-proguard-files"
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }



    lint {
        disable 'RestrictedApi'
    }
    namespace 'com.TritiumGaming.phasmophobiaevidencepicker'

    sourceSets {
        main.kotlin.srcDirs += 'src/main/kotlin'
        main.java.srcDirs += 'src/main/java'
    }
}

dependencies {

    implementation 'com.google.firebase:firebase-analytics:21.3.0'
    implementation 'androidx.core:core-ktx:1.12.0'

    implementation 'com.android.support:multidex:1.0.3'

    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'com.google.code.gson:gson:2.10.1'
    //implementation 'com.googlecode.jinahya:ocap-api:1.3.1'
    //implementation 'com.itextpdf:itextpdf:5.5.13.3'

    /*

    constraints {
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
        }
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
        }
    }
    */

    // PRIMARY
    def work_version = "2.8.1"
    implementation "androidx.work:work-runtime:$work_version"
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.3'
    implementation 'androidx.navigation:navigation-ui-ktx:2.7.3'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.material:material:1.9.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    // GOOGLE FIREBASE
    // Import the BoM for the Firebase platform
    implementation platform('com.google.firebase:firebase-bom:32.3.1')

    // Declare the dependencies for the Crashlytics and Analytics libraries
    // When using the BoM, you don't specify versions in Firebase library dependencies
    implementation 'com.google.firebase:firebase-crashlytics:18.4.3'
    implementation 'com.google.firebase:firebase-analytics:21.3.0'
    implementation 'com.google.firebase:firebase-perf:20.4.1'

    // GOOGLE ADS
    implementation 'com.google.android.gms:play-services-ads:22.4.0'
    implementation 'com.google.android.ump:user-messaging-platform:2.1.0'

    //GOOGLE GSON
    implementation 'com.google.code.gson:gson:2.10.1'

    // IN-APP REVIEWS
    /* This dependency is downloaded from the Google’s Maven repository.
     * So, make sure you also include that repository in your project's build.gradle file.*/
    implementation 'com.google.android.play:core:1.10.3'
    // For Kotlin users also add the Kotlin extensions library for Play Core:
    implementation 'com.google.android.play:core-ktx:1.8.1'

    // FRAGMENTS
    def fragment_version = '1.6.1'
    // Java language implementation
    implementation "androidx.fragment:fragment-ktx:$fragment_version"
    // Kotlin
    implementation "androidx.fragment:fragment-ktx:$fragment_version"

    // For use with animated gifs
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'


    // DO NOT UPDATE THIS -- BREAKING CHANGES
    implementation 'commons-io:commons-io:2.6'


    /*
        ---- START----
        ANDROID COMPOSE
    */
    implementation platform('androidx.compose:compose-bom:2023.09.01')
    androidTestImplementation platform('androidx.compose:compose-bom:2023.09.01')

    // Android Studio Preview support
    implementation 'androidx.compose.ui:ui-tooling-preview'
    debugImplementation 'androidx.compose.ui:ui-tooling'

    var compose_version = '1.5.1'
    implementation "androidx.compose.ui:ui:$compose_version"
    implementation "androidx.compose.material:material:$compose_version"
    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
    implementation 'androidx.activity:activity-compose:1.7.2'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'

    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
    /*
        ----- END -----
    */

}